--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
-  "name": "template",
+  "name": "hw05-avatars",
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app",
     "start:dev": "nodemon app"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.6",
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^10.0.0",
     "express": "4.17.1",
+    "gravatar": "^1.8.2",
     "http-errors": "^1.8.0",
+    "jimp": "^0.16.1",
     "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.7",
-    "morgan": "1.10.0",
+    "mongoose-paginate-v2": "^1.4.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.3",
+    "nanoid": "^3.1.25",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
